<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dedicado.myapplication.CalendarioEstudiante"
    android:orientation="vertical">

       <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Ingresar Actividad" />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/ingresarActvidad" />

       <Space
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <Space
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Ingrese Fecha" />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/ingresarFecha" />

        <Space
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Ingrese Hora" />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/ingresarHora" />

        <Space
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ir a materias"/>


</LinearLayout>
